syntax = "proto3";
package poker;

option go_package = "./pb";

import "global_enum.proto";

// ----------------------------builder生成器数据--------------------------
message GeneratorInfo {
  GeneratorType id   = 1;  // 生成器ID
  uint32        incr = 2;  // 增量
}

//@pbtool:string|poker|generator|#房间id生成器
message GeneratorData {
  repeated GeneratorInfo list = 1;  // 房间id生成器
}

//@pbtool:hash|poker|user_info|uid@uint64|#玩家永久缓存信息
message UserInfo {
  uint64 uid    = 1;  // 玩家ID
  string name   = 2;  // 玩家名称
  string avatar = 3;  // 玩家头像
}

// ----------------------------德州扑克房间数据----------------------------
//@pbtool:hash|poker|texas|RoomId@uint64|#德州游戏房间信息数据
message TexasRoomData {
  uint64         room_id             = 1;   // 唯一id
  int32          game_id             = 2;   // 游戏id
  RoomStatus     room_state          = 3;   // 房间状态
  int64          create_time         = 4;   // 房间创建时间
  TexasTableData table               = 5;   // 牌桌数据
  int64          total_buyin_chips   = 8;   // 总买入筹码
  int64          total_service_chips = 9;   // 总服务费
  int64          total_runing_water  = 10;  // 总流水
  int64          online_number       = 11;  // 在线玩家
}

message TexasTableData {
  GameState                    cur_state  = 1;  // 游戏状态
  uint32                       round      = 2;  // 当前局数
  map<uint64, TexasPlayerData> players    = 3;  // 加入房间的玩家
  map<uint32, uint64>          chair_info = 4;  // 玩家座位号和uid的映射关系
  TexasGameData                game_data  = 5;  // 游戏数据
}

message TexasPlayerData {
  uint64              uid          = 1;  // 玩家id
  int64               chips        = 2;  // 玩家筹码
  uint32              chair_id     = 3;  // 座位号
  PlayerStatus        player_state = 4;  // 加入房间、加入牌桌、退出牌桌、结算完成
  TexasPlayerGameInfo game_info    = 6;  // 玩家游戏信息
  int64               total_incr   = 7;  // 总盈利
  int64               total_buyin  = 8;  // 总买入
  uint32              total_times  = 9;  // 总次数
}

message TexasPlayerGameInfo {
  uint32          position        = 1;   // 玩家位置
  GameState       game_state      = 2;   // 游戏状态
  OperateType     operate         = 3;   // 玩家操作
  int64           bet_chips       = 4;   // 玩家下注
  OperateType     pre_operate     = 5;   // 是否预操作
  int64           pre_bet_chips   = 6;   // 预下注筹码
  CardType        best_card_type  = 7;   // 玩家最大牌型
  uint32          best_card_value = 8;   // 最大牌值
  repeated uint32 best_card_list  = 9;   // 玩家最大牌
  repeated uint32 hand_card_list  = 10;  // 玩家手牌
  repeated bool   hand_Show_list  = 11;  // 是否展示
  int64           total_bet_chips = 12;  // 全部下注筹码
  bool            is_change       = 13;  // 玩家信息是否有变更
}

message TexasGameData {
  uint32           dealer_chair_id  = 1;   // 庄家座位号
  uint32           small_chair_id   = 2;   // 小盲座位号
  uint32           big_chair_id     = 3;   // 大盲座位号
  int64            min_raise        = 4;   // 最小加注
  int64            max_bet_chips    = 5;   // 最大下注
  repeated uint32  public_card_list = 6;   // 公共牌列表
  uint32           uid_cursor       = 7;   // 当前操作玩家
  repeated uint64  uid_list         = 8;   // 玩家列表
  TexasPotPoolData pot_pool         = 9;   // 底池数据
  bool             is_compare       = 10;  // 是否比牌
  uint32           card_cursor      = 11;  // 发牌指针
  repeated uint32  card_list        = 12;  // 牌堆
}

message TexasPotPoolData {
  int64                 total_bet_chips = 1;  // 下注总筹码
  int64                 bet_chips       = 2;  // 下注筹码
  repeated TexasPotData pot_list        = 3;  // 底池
}

message TexasPotData {
  uint32          pot_type = 1;  // 底池类型：0-主池，1-边池
  int64           chips    = 2;  // 总筹码
  repeated uint64 uid_list = 3;  // 玩家id
}
